WIP: pkp/pkp-lib#7014 DOI refactor
WIP:  pkp/pkp-lib#6062 DOI refactor
WIP: Implement deposit error and registration message in abstract way
[abedc4090] WIP: Implement Crossref registration with EntityDAO-based DOI
[2a336372a] WIP: Implement markRegistered functionality
[927a8def3] WIP: Integrate EntityDAO-based DOI filtering in UI
[f7c880441] WIP: Integrate EntityDAO-based DOIs into UI and remove Crossref specific references
[f027f886d] WIP: Fixes for backend DoiListPanel actions
[fdc9798b2] Make EntityDAO-based DOIs editable from UI
[bf78eae90] Move DOI management out of plugin
[e2611c063] Move DOI constants to Repo
[de9a2c152] Fix minor typos
[d4eb084b2] Add ArticleGalley DOIs
[90084f260] WIP: pkp/pkp-lib#6062 DOI refactor
[7591768a0] Add DOI settings to context via workflow
[14049d359] Update DOI entity to use new design pattern
[e230a6124] Add beginnings of new DOI entity
[7921a9b12] Add DOI API Handler
[e49457b87] Add DOI management

Enable DOIs for Issues
Make DOI interaction generic at pkp-lib level for reuse
WIP: Move DOI functionality out of plugins
WIP: Move more DOI functionality out of plugins
WIP: Move more DOI functionality out of plugins
Update DOI-related constants for Vue components
Move DOI settings to Context and inject Context objects where necessary rather than getting from request.
Add in route-based export and mark registered for submissions and issues
Add issue and submission depositing flow + Crossref implementation
Remove old deposit/export code
Update API flow for export actions between backend and UI
Add assign DOIs endpoints for submissions and issues
Refactor bulk actions and add DOI assignment
Add automatic DOI generation in various workflow stages
Break DOI settings out into separate forms and add to DOI management/distribution page.
Fix variable typo
WIP: pkp-lib code review fixes
Simplify IDoiRegistrationAgency interface
Rename DOI object stored on pubObjects to 'doiObject' to avoid ambiguity between 'doi' (object) and 'doi' (strin

--- a/locale/bs_BA/submission.po
+++ b/locale/bs_BA/submission.po
@@ -466,11 +466,11 @@ msgstr "ISBNdb API ključ"
 
 msgid "metadata.filters.crossref.settings.email.validationMessage"
 msgstr ""
-"Unesite važeću e-mail adresu za registraciju CrossRef-a. Možete besplatno "
-"registrovati svoj e-mail na web stranici CrossRef."
+"Unesite važeću e-mail adresu za registraciju Crossref-a. Možete besplatno "
+"registrovati svoj e-mail na web stranici Crossref."
 
 msgid "metadata.filters.crossref.settings.email.displayName"
-msgstr "CrossRef E-mail za registraciju"
+msgstr "Crossref E-mail za registraciju"
 
 msgid "submission.submit.extendedMetadata"
 msgstr "Prošireni metapodaci"
