--- a/locale/pl_PL/submission.po
+++ b/locale/pl_PL/submission.po
@@ -19,10 +19,10 @@ msgid "author.submit.submissionCitations"
 msgstr "Należy dostarczyć odpowiednio sformatowaną listę cytowanych prac. Proszę o rozdzielenie poszczególnych opisów bibliograficznych pustym wierszem."
 
 msgid "metadata.filters.crossref.settings.email.displayName"
-msgstr "Rejestracja adresu e-mail w CrossRef"
+msgstr "Rejestracja adresu e-mail w Crossref"
 
 msgid "metadata.filters.crossref.settings.email.validationMessage"
-msgstr "Proszę o wpisanie adresu e-mail do zarejestrowania się w serwisie CrossRef. Możesz zarejestrować się bezpłatnie poprzez stronę serwisu CrossRef."
+msgstr "Proszę o wpisanie adresu e-mail do zarejestrowania się w serwisie Crossref. Możesz zarejestrować się bezpłatnie poprzez stronę serwisu Crossref."
 
 msgid "metadata.filters.isbndb.settings.apiKey.displayName"
 msgstr "Klucz ISBNdb API"
