--- a/locale/ru_RU/submission.po
+++ b/locale/ru_RU/submission.po
@@ -97,10 +97,10 @@ msgid "submission.submit.extendedMetadata"
 msgstr "Расширенные метаданные"
 
 msgid "metadata.filters.crossref.settings.email.displayName"
-msgstr "Адрес электронной почты, зарегистрированный в CrossRef"
+msgstr "Адрес электронной почты, зарегистрированный в Crossref"
 
 msgid "metadata.filters.crossref.settings.email.validationMessage"
-msgstr "Пожалуйста, введите правильный адрес электронной почты, зарегистрированный в CrossRef. Вы можете бесплатно зарегистрировать свой адрес электронной почты на веб-сайте CrossRef."
+msgstr "Пожалуйста, введите правильный адрес электронной почты, зарегистрированный в Crossref. Вы можете бесплатно зарегистрировать свой адрес электронной почты на веб-сайте Crossref."
 
 msgid "metadata.filters.isbndb.settings.apiKey.displayName"
 msgstr "Ключ ISBNdb API"
