--- a/locale/sl_SI/submission.po
+++ b/locale/sl_SI/submission.po
@@ -73,10 +73,10 @@ msgid "submission.submit.extendedMetadata"
 msgstr "Razširjeni metapodatki"
 
 msgid "metadata.filters.crossref.settings.email.displayName"
-msgstr "CrossRef registracijski e-poštni naslov"
+msgstr "Crossref registracijski e-poštni naslov"
 
 msgid "metadata.filters.crossref.settings.email.validationMessage"
-msgstr "Vnesite veljaven CrossRef registracijski e-poštni naslov. Svojo e-pošto lahko brezplačno registrirate na spletni strani CrossRef."
+msgstr "Vnesite veljaven Crossref registracijski e-poštni naslov. Svojo e-pošto lahko brezplačno registrirate na spletni strani Crossref."
 
 msgid "metadata.filters.isbndb.settings.apiKey.displayName"
 msgstr "Ključ za ISBNdb API"
