--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -167,6 +167,9 @@ msgstr "Reviewer Guidance"
 msgid "manager.publication.reviewReminders.success"
 msgstr "The review reminder details have been updated."
 
+msgid "manager.dois.title"
+msgstr "DOIs"
+
 msgid "manager.emails.confirmDelete"
 msgstr "Are you sure you want to delete this email template?"
 
@@ -648,6 +651,54 @@ msgstr "Narrow results by country, region and/or city."
 
 msgid "manager.affiliationAndSupport"
 msgstr "Sponsor"
+
+msgid "manager.setup.dois"
+msgstr "DOIs"
+
+msgid "manager.setup.enableDois.description"
+msgstr "Enables the assignment of Digital Object Identifiers to publication objects."
+
+msgid "manager.setup.enableDois.enable"
+msgstr "Enable DOIs"
+
+msgid "doi.manager.settings.doiObjectsRequired"
+msgstr "Please choose the objects DOIs should be assigned to."
+
+msgid "doi.manager.settings.doiPrefix"
+msgstr "DOI Prefix"
+
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr "The DOI Prefix is assigned by registration agencies (e.g. <a href=\"http://www.crossref.org\" target=\"_new\">Crossref</a>) and is in the format 10.xxxx (e.g. 10.1234):"
+
+msgid "doi.manager.settings.doiPrefixPattern"
+msgstr "The DOI prefix is mandatory and must be in the form 10.xxxx."
+
+msgid "doi.manager.settings.enableFor"
+msgstr "Enable for {$objects}"
+
+msgid "doi.manager.settings.doiSuffix"
+msgstr "DOI Suffix"
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr "A DOI suffix can take any form, but must be unique among all publishing objects with the same DOI prefix assigned:"
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "Use default pattern."
+
+msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgstr "Enter an individual DOI suffix for each published item. You'll find DOI input fields on the DOI Management page."
+
+msgid "doi.manager.settings.doiSuffixLegacy"
+msgstr "Use issue-volume-article-based legacy pattern."
+
+msgid "doi.manager.settings.registrationAgency"
+msgstr "Registration Agency"
+
+msgid "doi.manager.settings.registrationAgency.description"
+msgstr "Please select the registration agency you would like to use when depositing DOIs."
+
+msgid "doi.manager.settings.registrationAgency.none"
+msgstr "None"
 
 msgid "manager.setup.publishing"
 msgstr "Publishing Details"
